--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "nw-ingot-price-calculator",
   "version": "0.1.0",
   "private": true,
+  "homepage" : "https://mrgobus.github.io/nw-ingot-price-calculator",
   "dependencies": {
     "@emotion/react": "^11.7.1",
     "@emotion/styled": "^11.6.0",
